# zera-resourcemanager

./: .gitignore  CMakeLists.txt  Doxyfile  ResourceManager.pro  main.cpp  resman-libConfig.cmake.in  resmanrunfacade.cpp  resmanrunfacade.h  resourcemanager.cpp  resourcemanager.h  resourcemanager.user.pri  rmprotobufwrapper.cpp  rmprotobufwrapper.h
.github/workflows/: buildAndTest.yml
resource/: resman_resource.cpp  resman_resource.h  resman_resourceidentity.cpp  resman_resourceidentity.h  resource.cpp  resource.h  resourceobject.cpp  resourceobject.h
scpi/: catalog.cpp  catalog.h  delegate.cpp  delegate.h  resman_catalog.cpp  resman_catalog.h  resman_delegate.cpp  resman_delegate.h  resman_resourcescpiobject.cpp  resman_resourcescpiobject.h  resman_scpiinterface.cpp  resman_scpiinterface.h  resourceobject.cpp  resourceobject.h  scpiinterface.cpp  scpiinterface.h
server/: client.cpp  client.h  clientmultiton.cpp  clientmultiton.h  resman_clientmultiton.cpp  resman_clientmultiton.h  resman_clientsocket.cpp  resman_clientsocket.h  resman_iclientmultiton.h  resman_serverinterface.cpp  resman_serverinterface.h  serverinterface.cpp  serverinterface.h
server/implementations/: scpi.cpp  scpi.h
systemd/: CMakeLists.txt  resourcemanager.service  resourcemanager.socket
tests/: CMakeLists.txt  clientmultitontest.cpp  clientmultitontest.h  test_legacy.cpp  test_legacy.h  test_scpi.cpp  test_scpi.h
